--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "argeo-build"]
+[submodule "src/argeo-build"]
 	path = sdk/argeo-build
 	url = http://git.argeo.org/cc0/argeo-build.git
 	branch = unstable
