--- a/org.argeo.cms.jcr/build.properties
+++ b/org.argeo.cms.jcr/build.properties
@@ -4,5 +4,4 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                OSGI-INF/jcrContentProvider.xml
 source.. = src/
-additional.bundles = org.apache.jackrabbit.data,\
-                     org.apache.jackrabbit.spi.commons
+additional.bundles = org.apache.jackrabbit.spi.commons
